добавил интрейфейс, для универсального взаимодействия с экспортируемыми в таблицу сущностями